# breast_cancer

./: .gitignore  README.md  pyproject.toml  requirements.txt
dataset/processed/: test_processed_approach_2.xlsx  test_processed_approach_3.xlsx  test_processed_full.xlsx  train_processed_approach_2.xlsx  train_processed_approach_3.xlsx  train_processed_full.xlsx
dataset/processed/approach_4/: best_umap_params.json  test_processed_approach_4.xlsx  train_processed_approach_4.xlsx
dataset/raw/: Clinical_and_Other_Features.xlsx  test_set.xlsx
modeling/: data_preprocessing.py  feature_engineering.py  manufacturer_analysis.py  model_training.py  visualisation.py
notebooks/: 1. data_preprocessing_image_features.ipynb  2. EDA.ipynb  3. modeling.ipynb
reports/: model_metrics.xlsx
reports/approach_1/: approach_1_log_reg_report.xlsx  approach_1_rf_report.xlsx  approach_1_xgboost_report.xlsx
reports/approach_2/: approach_2_log_reg_report.xlsx  approach_2_rf_report.xlsx  approach_2_xgboost_report.xlsx
reports/approach_3/: approach_3_log_reg_report.xlsx  approach_3_rf_report.xlsx  approach_3_xgboost_report.xlsx
reports/approach_4/: approach_4_log_reg_report.xlsx  approach_4_rf_report.xlsx  approach_4_xgboost_report.xlsx
tests/: test_data_preprocessing.py  test_feature_engineering.py  test_model_training.py
