[project]
name = "breast-cancer"
version = "0.1.0"
description = "ML model for breast cancer prediction"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ace-tools==0.0",
    "alembic==1.14.1",
    "annotated-types==0.6.0",
    "antlr4-python3-runtime==4.9.3",
    "asttokens==2.4.1",
    "attrs==23.2.0",
    "black==24.3.0",
    "build==1.2.1",
    "cfgv==3.4.0",
    "clarabel==0.10.0",
    "click==8.1.7",
    "clickhouse-driver==0.2.7",
    "cloudpickle==3.1.1",
    "colorlog==6.9.0",
    "comm==0.2.2",
    "contourpy==1.2.1",
    "cvxopt==1.3.2",
    "cvxpy==1.6.0",
    "cx-oracle==8.3.0",
    "cycler==0.12.1",
    "debugpy==1.8.1",
    "decorator==5.1.1",
    "distlib==0.3.8",
    "et-xmlfile==2.0.0",
    "exceptiongroup==1.2.0",
    "executing==2.0.1",
    "fancyimpute==0.7.0",
    "fastjsonschema==2.19.1",
    "filelock==3.13.4",
    "fonttools==4.51.0",
    "greenlet==3.1.1",
    "identify==2.5.35",
    "importlib-metadata==7.1.0",
    "importlib-resources==6.4.0",
    "iniconfig==2.0.0",
    "ipykernel==6.29.4",
    "ipython==8.18.1",
    "isort==5.13.2",
    "jedi==0.19.1",
    "joblib==1.3.2",
    "jsonschema==4.21.1",
    "jsonschema-specifications==2023.12.1",
    "jupyter-black==0.3.4",
    "jupyter-client==8.6.1",
    "jupyter-core==5.7.2",
    "kiwisolver==1.4.5",
    "knnimpute==0.1.0",
    "llvmlite==0.44.0",
    "mako==1.3.9",
    "markupsafe==3.0.2",
    "matplotlib==3.8.4",
    "matplotlib-inline==0.1.6",
    "multimethod==1.10",
    "mypy==1.9.0",
    "mypy-extensions==1.0.0",
    "nbformat==5.10.4",
    "nest-asyncio==1.6.0",
    "nodeenv==1.8.0",
    "nose==1.3.7",
    "numba==0.61.0",
    "numpy==1.26.4",
    "nvidia-nccl-cu12==2.25.1",
    "omegaconf==2.3.0",
    "openpyxl==3.1.5",
    "optuna==4.2.1",
    "osqp==0.6.7.post3",
    "packaging==24.0",
    "pandas==2.2.1",
    "pandas-stubs==2.2.1.240316",
    "pandera==0.18.3",
    "parso==0.8.3",
    "pathspec==0.12.1",
    "pexpect==4.9.0",
    "pillow==10.3.0",
    "platformdirs==4.2.0",
    "plotly==5.20.0",
    "pluggy==1.4.0",
    "polars==0.20.17",
    "pre-commit==3.7.0",
    "prompt-toolkit==3.0.43",
    "psutil==5.9.8",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.2",
    "pyarrow==15.0.2",
    "pydantic==2.6.4",
    "pydantic-core==2.16.3",
    "pygments==2.17.2",
    "pynndescent==0.5.13",
    "pyparsing==3.1.2",
    "pyproject-hooks==1.0.0",
    "pytest==8.1.1",
    "python-dateutil==2.9.0.post0",
    "pytz==2024.1",
    "pyyaml==6.0.1",
    "pyzmq==25.1.2",
    "qdldl==0.1.7.post5",
    "referencing==0.34.0",
    "rpds-py==0.18.0",
    "scikit-learn==1.4.1.post1",
    "scipy==1.13.0",
    "scs==3.2.7.post2",
    "seaborn==0.13.2",
    "setuptools==75.8.0",
    "shap==0.46.0",
    "six==1.16.0",
    "slicer==0.0.8",
    "sqlalchemy==2.0.38",
    "stack-data==0.6.3",
    "tenacity==8.2.3",
    "threadpoolctl==3.4.0",
    "tokenize-rt==5.2.0",
    "tomli==2.0.1",
    "tornado==6.4",
    "tqdm==4.66.2",
    "tqdm-stubs==0.2.1",
    "traitlets==5.14.2",
    "typeguard==4.2.1",
    "types-pytz==2024.1.0.20240203",
    "typing-extensions==4.10.0",
    "typing-inspect==0.9.0",
    "tzdata==2024.1",
    "tzlocal==5.2",
    "umap==0.1.1",
    "umap-learn==0.5.7",
    "virtualenv==20.25.1",
    "wcwidth==0.2.13",
    "wrapt==1.16.0",
    "xgboost==2.1.4",
    "xlsx2csv==0.8.2",
    "xlsxwriter==3.2.0",
    "zipp==3.18.1",
]

authors = [
  {name = "Askar Nyssanov", email = "nysanaskar@mail.ru"}
]

[project.urls]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 88
select = [
    "E",  # Pycodestyle errors
    "F",  # Pyflakes
    "W",  # Pycodestyle warnings
    "I",  # Isort (import sorting)
    "B",  # flake8-bugbear
    "C",  # flake8-comprehensions
    "N",  # pep8-naming
]
ignore = [
    "E203",  # Whitespace before ':' (conflicts with Black-style formatting)
]
target-version = "py311"
include = ["*.py"]
exclude = [".git", ".hg", ".mypy_cache", ".tox", ".venv", "_build", "buck-out", "build", "dist"]

[tool.vscode]
editor.formatOnSave = true
editor.defaultFormatter = "charliermarsh.ruff"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict = true

[tool.setuptools]
packages = ["modeling"]